@@ -1,5 +1,10 @@
 2004-09-17  Lutz Mueller <lutz@users.sourceforge.net>
 
+	* libexif/exif-entry.c (exif_entry_fix): New. Fixes any violations
+	  against the standard.
+
+2004-09-17  Lutz Mueller <lutz@users.sourceforge.net>
+
 	* libexif/exif-entry.c: Kill some warnings. Read as much from the
 	  UserComment tag as possible (as suggested by Angela Wrobel).
 
